--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/portfolio/assets/favicon_io/android-chrome-192x192.png">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon_io/android-chrome-192x192.png">
     <title>Portifólio - Sobre Mim</title>
-    <link rel="stylesheet" href="/portfolio/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 
@@ -25,7 +25,7 @@
             <p class="apresentacao__conteudo__texto">Atualmente, estou focado no desenvolvimento web, estudando bibliotecas como <strong class="titulo-destaque">Node.js e React.js, além de linguagens como JavaScript e TypeScript.</strong> Também estou explorando práticas modernas de desenvolvimento, como a criação de interfaces responsivas e o uso de frameworks de teste automatizado. Meu objetivo é aprimorar minhas habilidades para desenvolver aplicações web robustas e eficientes.</p>
 
         </section>
-        <img class="apresentacao__img" src="/portfolio/assets/foto_destaque.jpg" alt="Foto do Carlos Eduardo">
+        <img class="apresentacao__img" src="/assets/foto_destaque.jpg" alt="Foto do Carlos Eduardo">
     </main>
 
     <footer class="rodape">
