--- a/catalog.html
+++ b/catalog.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/portfolio/assets/favicon_io/android-chrome-192x192.png">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon_io/android-chrome-192x192.png">
     <title>Portifólio - Catálogo</title>
-    <link rel="stylesheet" href="/portfolio/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 </head>
 
@@ -25,7 +25,7 @@
         <section class="catalogo__conteudo">
             <h1 class="catalogo__conteudo__titulo">Meus Projetos</h1>
             <div class="projeto">
-                <img src="/portfolio/assets/filmfaves.png" alt="Projeto 1" class="projeto__imagem">
+                <img src="/assets/filmfaves.png" alt="Projeto 1" class="projeto__imagem">
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">Film Faves</h2>
                     <p class="projeto__texto">FilmeFaves é um aplicativo desenvolvido em React para visualizar informações sobre filmes, como detalhes do filme, avaliações dos usuários e lista de filmes populares. Ele utiliza a API do The Movie Database (TMDb) para obter os dados dos filmes.</p>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="projeto">
-                <img src="/portfolio/assets/qrcode.png" alt="Projeto 2" class="projeto__imagem">
+                <img src="/assets/qrcode.png" alt="Projeto 2" class="projeto__imagem">
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">Gerador de QR Code</h2>
                     <p class="projeto__texto">Este é um projeto simples de gerador de QR code, permitindo que os usuários criem QR codes para URLs ou textos. Abaixo está uma visão geral do projeto, incluindo detalhes sobre a estrutura HTML, estilização CSS, funcionalidade JavaScript e como utilizá-lo.</p>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="projeto">
-                <img src="/portfolio/assets/blog.jpg" alt="Projeto 2" class="projeto__imagem">
+                <img src="/assets/blog.jpg" alt="Projeto 2" class="projeto__imagem">
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">Blog Semântico</h2>
                     <p class="projeto__texto">Este é um projeto de um blog semântico, desenvolvido com HTML e CSS, que oferece uma interface simples e organizada para compartilhar postagens sobre diferentes tópicos.</p>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="projeto">
-                <img src="/portfolio/assets/Instagram_logo.png" alt="Projeto 2" class="projeto__imagem">
+                <img src="/assets/Instagram_logo.png" alt="Projeto 2" class="projeto__imagem">
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">Clone do Instagram</h2>
                     <p class="projeto__texto">Este projeto é um clone da página de login do Instagram, buscando replicar sua estrutura e estilo.</p>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="projeto">
-                <img src="/portfolio/assets/cfshost.png" alt="Projeto 2" class="projeto__imagem">
+                <img src="/assets/cfshost.png" alt="Projeto 2" class="projeto__imagem">
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">cFS Host</h2>
                     <p class="projeto__texto">Este website é para uma empresa fictícia chamada cFS Host, que oferece serviços de hospedagem na web.</p>
