--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
                 <div class="projeto__descricao">
                     <h2 class="projeto__titulo">Blog Semântico</h2>
                     <p class="projeto__texto">Este é um projeto de um blog semântico, desenvolvido com HTML e CSS, que oferece uma interface simples e organizada para compartilhar postagens sobre diferentes tópicos.</p>
-                    <a href="#" class="projeto__link">Ver mais</a>
+                    <a href="https://semantic-blog-three.vercel.app/" class="projeto__link">Ver mais</a>
                 </div>
             </div>
             <div class="projeto">
