--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo"><strong class="titulo-destaque">Sobre mim</strong></h1>
-            <p class="apresentacao__conteudo__texto">Me chamo <strong class="titulo-destaque"> Eduardo, tenho 20 anos e estou no 4° semestre do curso de Ciências da Computação </strong> na Universidade Estadual da Paraíba - Campus VII. Escolhi essa área por afinidade e pelas muitas oportunidades que ela oferece. Sou natural de Iguatu-CE, mas cresci em Icó-CE e atualmente moro em Patos-PB.</p>
+            <p class="apresentacao__conteudo__texto">Me chamo <strong class="titulo-destaque"> Carlos Eduardo, tenho 20 anos e estou no 4° semestre do curso de Ciências da Computação </strong> na Universidade Estadual da Paraíba - Campus VII. Escolhi essa área por afinidade e pelas muitas oportunidades que ela oferece. Sou natural de Iguatu-CE, mas cresci em Icó-CE e atualmente moro em Patos-PB.</p>
             <p class="apresentacao__conteudo__texto">Atualmente, estou focado no desenvolvimento web, estudando bibliotecas como <strong class="titulo-destaque">Node.js e React.js, além de linguagens como JavaScript e TypeScript.</strong> Também estou explorando práticas modernas de desenvolvimento, como a criação de interfaces responsivas e o uso de frameworks de teste automatizado. Meu objetivo é aprimorar minhas habilidades para desenvolver aplicações web robustas e eficientes.</p>
 
         </section>
